src/main/kotlin/com/team1/mvp_test/common/error/StepErrorMessage.kt
package com.team1.mvp_test.common.error

enum class StepErrorMessage(var message: String) {
    NOT_AUTHORIZED("접근 권한이 없습니다.")
}